--- a/static/sass/main.css
+++ b/static/sass/main.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: Squealer;
-  src: url("../fonts/squealer_embossed.ttf"); }
+  font-family: Matrix;
+  src: url("../fonts/matrixbsc_0.ttf"); }
 body {
   background: #0d0d0d;
   color: #fff; }
@@ -10,7 +10,7 @@ button {
 
 h1 {
   text-align: center;
-  font-family: Squealer;
+  font-family: Matrix;
   margin-bottom: 20px;
   font-size: 11vw;
   width: 100%;
