--- a/public/sass/chat.scss
+++ b/public/sass/chat.scss
@@ -1,12 +1,13 @@
 #container {
   padding: 0;
   #chat_col {
+    padding-right: 0;
     #chat {
       background: #fff;
       padding: 15px;
       #mess_zone {
-        height: 90vh;
-        max-height: 90vh;
+         height: calc(100vh - 100px);
+         max-height: calc(100vh - 100px);
         overflow-y: scroll;
         max-width: 100%;
         overflow-x: hidden;
