--- a/public/sass/game.scss
+++ b/public/sass/game.scss
@@ -3,8 +3,9 @@
   background:#fff;
   color:#000;
   #game_col {
-    padding: 0;
+    padding-left: 0;
     #game_zone {
+      padding:15px;
       background: #0d0d0d;
       height: 100vh;
 
