--- a/public/sass/main.css
+++ b/public/sass/main.css
@@ -1,31 +1,28 @@
 @font-face {
-<<<<<<< HEAD
   font-family: Matrix;
   src: url("../fonts/matrixbsc_0.ttf"); }
-=======
-  font-family: Squealer;
-  src: url("../fonts/squealer_embossed.ttf"); }
->>>>>>> 70e5b213da2362e0997b317ac8372b24ce7c07cf
 body {
   background: #0d0d0d;
-  color: #fff; }
+  color: #eee; }
 
-button {
-  width: 100%; }
+.btn,
+input {
+  width: 100%;
+  margin: 10px 0; }
 
 h1 {
   text-align: center;
-<<<<<<< HEAD
   font-family: Matrix;
-=======
-  font-family: Squealer;
->>>>>>> 70e5b213da2362e0997b317ac8372b24ce7c07cf
   margin-bottom: 20px;
-  font-size: 11vw;
+  font-size: 14vw;
   width: 100%;
   color: #d20000; }
 
 h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 22px;
+  width: 100%;
   color: #ccc; }
 
 .unselectable {
@@ -35,5 +32,9 @@ h2 {
   -o-user-select: none;
   user-select: none;
   cursor: default; }
+
+@media only screen and (min-width: 992px) {
+  h1 {
+    font-size: 140px; } }
 
 /*# sourceMappingURL=main.css.map */
