can change status

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -23,6 +23,9 @@
               <a href="/admin-rmcard" class="btn btn-default btn-sm">Supprimer une carte</a>
             </div>
             <div class="col-xs-12">
+              <a href="/admin-change" class="btn btn-default btn-sm">Changer le status de quelqu'un</a>
+            </div>
+            <div class="col-xs-12">
               <a href="/menu" class="btn btn-default btn-sm">Retourner au menu normal</a>
             </div>
           </div>
